--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@types/supertest": "^2.0.12",
     "chalk": "4.1.2",
     "jest": "^28.1.1",
+    "jest-mock-extended": "2.0.4",
     "prisma": "^4.0.0",
     "supertest": "^6.2.3",
     "ts-jest": "^28.0.4",
